objects/advpm__Advologix_Global_Search_Options__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>System settings used by Advologix internally.</description>
    <fields>
        <fullName>advpm__Exclude_Search_Object__c</fullName>
        <label>Exclude Search Object</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>advpm__Parent_Search_Object__c</fullName>
        <label>Parent Search Object</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>advpm__User_Id__c</fullName>
        <label>User Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Advologix Global Search Options</label>
</CustomObject>